--- a/SVM/SVM_PCA.ipynb
+++ b/SVM/SVM_PCA.ipynb
@@ -181,6 +181,8 @@
    "metadata": {},
    "source": [
     "### 2. SVM 훈련\n",
+    " - 클래스별 학습을 위해 데이터셋을 나눕니다.\n",
+    " - KPCA와 GridSearchCV를 적용합니다.\n",
     " - SVM 분류기 객체를 생성합니다.\n",
     " - 훈련 데이터로 학습하고 테스트 데이터를 통해 정확도를 계산합니다."
    ]
