--- a/test.ipynb
+++ b/test.ipynb
@@ -16,9 +16,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import joblib\n",
     "import pickle\n",
-    "from tqdm import tqdm\n",
     "import numpy as np\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "import matplotlib.pyplot as plt\n",
@@ -55,15 +53,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./model.pkl\n"
+      "Pipeline(steps=[('scaler', StandardScaler()),\n",
+      "                ('kpca', KernelPCA(kernel='rbf', n_components=15)),\n",
+      "                ('lda', LinearDiscriminantAnalysis(n_components=1)),\n",
+      "                ('svc',\n",
+      "                 SVC(C=10, class_weight={'Fake': 9, 'Real': 1}, gamma=0.01,\n",
+      "                     probability=True))])\n"
      ]
     }
    ],
    "source": [
     "# Load model\n",
     "model_path = './model.pkl'\n",
-    "best_pipe = joblib.load(model_path)\n",
-    "print(f\"{model_path}\")"
+    "with open(model_path, 'rb') as f:\n",
+    "    best_pipe = pickle.load(f)\n",
+    "\n",
+    "print(best_pipe)"
    ]
   },
   {
@@ -71,15 +76,7 @@
    "execution_count": 4,
    "id": "591cb3c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading test data: 2000it [01:01, 32.37it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load test data\n",
     "test_x = []\n",
@@ -87,7 +84,7 @@
     "test_file_names = []\n",
     "\n",
     "with open(test_metadata_path, 'r', encoding='utf-8') as f:\n",
-    "    for line in tqdm(f, desc=\"Loading test data\"):\n",
+    "    for line in f:\n",
     "        spk, file_name, _, _, label = line.strip().split(' ')\n",
     "        wav_path = os.path.join(test_data_path, file_name)\n",
     "        features = extract_features_from_path(wav_path)\n",
