--- a/train.ipynb
+++ b/train.ipynb
@@ -18,11 +18,9 @@
     "import os\n",
     "import numpy as np\n",
     "import librosa\n",
-    "import joblib\n",
     "import pickle\n",
-    "from tqdm import tqdm\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import ParameterGrid, cross_val_score\n",
+    "from sklearn.model_selection import ParameterGrid, GridSearchCV, cross_val_score\n",
     "from model import extract_features_from_path, make_pipe"
    ]
   },
@@ -51,22 +49,14 @@
    "execution_count": 3,
    "id": "265e0476",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading train data: 4000it [01:58, 33.79it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load train data\n",
     "train_x = []\n",
     "train_y = []\n",
     "\n",
     "with open(train_metadata_path, 'r', encoding='utf-8') as f:\n",
-    "    for line in tqdm(f, desc=\"Loading train data\"):\n",
+    "    for line in f:\n",
     "        spk, file_name, _, _, label = line.strip().split(' ')\n",
     "        wav_path = os.path.join(train_data_path, file_name)\n",
     "        features = extract_features_from_path(wav_path)\n",
@@ -108,41 +98,29 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GridSearch: 100%|███████████████████████████████| 21/21 [00:50<00:00,  2.38s/it]"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "best hyperparameters: {'svc__C': 10, 'svc__gamma': 0.01}, CV Accuracy = 0.9755\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
     "# 3-fold cv grid search\n",
-    "best_score  = 0.0\n",
-    "best_params = None\n",
+    "pipe = make_pipe()\n",
+    "gs = GridSearchCV(\n",
+    "    estimator=pipe,\n",
+    "    param_grid=param_grid,\n",
+    "    cv=3,\n",
+    "    scoring='accuracy',\n",
+    "    n_jobs=-2\n",
+    ")\n",
+    "gs.fit(train_x, train_y)\n",
     "\n",
-    "for params in tqdm(grid, desc=\"GridSearch\", ncols=80):\n",
-    "    pipe = make_pipe().set_params(**params)\n",
-    "    scores = cross_val_score(pipe, train_x, train_y, cv=3, scoring='accuracy', n_jobs=-2)\n",
-    "    mean_score = scores.mean()\n",
-    "    if mean_score > best_score:\n",
-    "        best_score, best_params = mean_score, params\n",
+    "print(f\"\\nbest hyperparameters: {gs.best_params_}, CV Accuracy = {gs.best_score_:.4f}\")\n",
     "\n",
-    "print(f\"\\nbest hyperparameters: {best_params}, CV Accuracy = {best_score:.4f}\")"
+    "best_params = gs.best_params_"
    ]
   },
   {
