--- a/do_not_open/do_not.ipynb
+++ b/do_not_open/do_not.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4c13f3b7",
    "metadata": {},
    "outputs": [],
@@ -25,10 +25,8 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.svm import SVC\n",
     "\n",
-    "from tqdm import tqdm\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import IPython.display as ipd"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -168,18 +166,6 @@
     "    ])\n",
     "\n",
     "    return feature_vector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95e0f230",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('model.pkl', 'rb') as f:\n",
-    "    b = pickle.load(f)\n",
-    "    print(b)"
    ]
   }
  ],
