--- a/train.ipynb
+++ b/train.ipynb
@@ -17,10 +17,8 @@
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "import librosa\n",
     "import pickle\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import ParameterGrid, GridSearchCV, cross_val_score\n",
+    "from sklearn.model_selection import ParameterGrid, GridSearchCV\n",
     "from model import extract_features_from_path, make_pipe"
    ]
   },
@@ -82,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare pipeline\n",
+    "# grid search parameters\n",
     "param_grid = {\n",
     "    'svc__C':     [0.1, 1, 10],\n",
     "    'svc__gamma': ['scale', 'auto', 0.001, 0.01, 0.1, 1, 10]\n",
@@ -621,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
