--- a/test.ipynb
+++ b/test.ipynb
@@ -19,7 +19,6 @@
     "import pickle\n",
     "import numpy as np\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
-    "import matplotlib.pyplot as plt\n",
     "from model import extract_features_from_path"
    ]
   },
@@ -136,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./etc/team_test_result.txt', 'w') as f:\n",
+    "with open('./etc/choihong04_test_result.txt', 'w') as f:\n",
     "    for i in range(len(predictions)):\n",
     "        f.write(f\"{test_file_names[i]} {predictions[i]}\\n\")"
    ]
@@ -152,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "============ Results Analysis ===========\n",
-      "Test: ./etc/team_test_result.txt\n",
+      "Test: ./etc/choihong04_test_result.txt\n",
       "True: ./2501ml_data/label/test_label.txt\n",
       "Accuracy: 96.20%\n",
       "Hit: 1924, Total: 2000\n",
@@ -161,7 +160,7 @@
     }
    ],
    "source": [
-    "!perl ./etc/eval.pl ./etc/team_test_result.txt ./2501ml_data/label/test_label.txt"
+    "!perl ./etc/eval.pl ./etc/choihong04_test_result.txt ./2501ml_data/label/test_label.txt"
    ]
   }
  ],
@@ -181,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
